2008-04-02  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch for the fcopy problem
	  [Bug 780533], with many thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for tracking it down and
	  providing a solution. Still have to convert his test script into
	  a proper test case.

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): fix 64bit support for Sun cc. [Bug 1921166]

	* unix/dltest/Makefile.in: support use of LDFLAGS in SHLIB_LD.

	* unix/configure: autoconf-2.13

2008-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclBinary.c: bug #1923966 - crash in binary format
	* tests/binary.test:   Added tests for the above crash condition.

2008-03-11  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: avoid using CoreFoundation after fork() on
	Darwin 9 even when TclpCreateProcess() uses vfork().

2008-03-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (Tcl_ExprObj):   Revised expression bytecode
	compiling so that bytecodes invalid due to changing context or due
	to the difference between expressions and scripts are not reused.
	[Bug 1899164].

	* generic/tclTest.c:	Backport the [testexprlongobj] testing command.

	* tests/execute.test (execute-6.8):	Added tests checking that
	bytecode is invalidates in the right situations.

2008-03-03  Reinhard Max  <max@suse.de>

	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which
	uses CMSPAR instead of PAREXT.

2008-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/pkgIndex.tcl: Backported 2.5.5 changes from
	* library/http/http.tcl:     8.5 version.
	* doc/http.n:                Document the meta accessor.

2008-02-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOCmd.c (Tcl_GetsObjCmd): do not reuse resultObj as
	it may be shared (crash condition).

2008-02-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
